# byu-ecen330

./: CMakeLists.txt  Makefile  bclean.sh  check_and_zip.py  format.py
.github/workflows/: ci.yml
archive/lab_simon/: fsTester.c  vsTester.c
drivers/: buttons.c  interrupts.c  intervalTimer.c  switches.c  touchscreen.c
lab1_helloworld/: main.c
lab2_gpio/: gpioTest.c
lab3_timer/: CMakeLists.txt
lab4_interrupts/: CMakeLists.txt  interrupt_test.c
lab5_touchscreen/: CMakeLists.txt  main.c
lab6_clock/: CMakeLists.txt  clockControl.c
lab7_tictactoe/: CMakeLists.txt  minimax.c  testBoards.c  ticTacToeControl.c
lab8_missilecommand/: CMakeLists.txt  config.h  gameControl.c  missile.c  plane.c
lab9_project/: CMakeLists.txt  eggman.c  eggman.h  eggmanControl.c  eggmanControl.h  main.c
